[gd_scene load_steps=5 format=3 uid="uid://cknik7ivlhiks"]

[ext_resource type="Script" path="res://scripts/board.gd" id="1_jripi"]
[ext_resource type="PackedScene" uid="uid://dkc7fb7m3x0pe" path="res://scenes/tableau_pile.tscn" id="3_rq7ix"]
[ext_resource type="PackedScene" uid="uid://cq24qa5x1uwfm" path="res://scenes/joker_pile.tscn" id="4_e126o"]
[ext_resource type="PackedScene" uid="uid://bxlnfxf1jh7xq" path="res://scenes/foundation_pile.tscn" id="4_g27dn"]

[node name="Board" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jripi")

[node name="FoundationPile" parent="." instance=ExtResource("4_g27dn")]
layout_mode = 1
offset_left = 409.0
offset_top = -304.0
offset_right = 559.0
offset_bottom = -104.0

[node name="FoundationPile2" parent="." instance=ExtResource("4_g27dn")]
layout_mode = 1
offset_left = 239.0
offset_top = -304.0
offset_right = 389.0
offset_bottom = -104.0

[node name="FoundationPile3" parent="." instance=ExtResource("4_g27dn")]
layout_mode = 1
offset_left = 69.0
offset_top = -304.0
offset_right = 219.0
offset_bottom = -104.0

[node name="FoundationPile4" parent="." instance=ExtResource("4_g27dn")]
layout_mode = 1
offset_left = -101.0
offset_top = -304.0
offset_right = 49.0
offset_bottom = -104.0

[node name="TableauPile" parent="." instance=ExtResource("3_rq7ix")]
layout_mode = 1
offset_left = -186.0
offset_top = -94.0
offset_right = -66.0
offset_bottom = 76.0
deal_count = 6

[node name="TableauPile7" parent="." instance=ExtResource("3_rq7ix")]
layout_mode = 1
offset_left = -311.0
offset_top = -94.0
offset_right = -191.0
offset_bottom = 76.0
deal_count = 6

[node name="TableauPile8" parent="." instance=ExtResource("3_rq7ix")]
layout_mode = 1
offset_left = -436.0
offset_top = -94.0
offset_right = -316.0
offset_bottom = 76.0
deal_count = 6

[node name="TableauPile9" parent="." instance=ExtResource("3_rq7ix")]
layout_mode = 1
offset_left = -561.0
offset_top = -294.0
offset_right = -441.0
offset_bottom = -124.0
deal_count = 10

[node name="TableauPile2" parent="." instance=ExtResource("3_rq7ix")]
layout_mode = 1
offset_left = -61.0
offset_top = -94.0
offset_right = 59.0
offset_bottom = 76.0
deal_count = 6

[node name="TableauPile3" parent="." instance=ExtResource("3_rq7ix")]
layout_mode = 1
offset_left = 64.0
offset_top = -94.0
offset_right = 184.0
offset_bottom = 76.0
deal_count = 5

[node name="TableauPile4" parent="." instance=ExtResource("3_rq7ix")]
layout_mode = 1
offset_left = 189.0
offset_top = -94.0
offset_right = 309.0
offset_bottom = 76.0
deal_count = 5

[node name="TableauPile5" parent="." instance=ExtResource("3_rq7ix")]
layout_mode = 1
offset_left = 314.0
offset_top = -94.0
offset_right = 434.0
offset_bottom = 76.0
deal_count = 4

[node name="TableauPile6" parent="." instance=ExtResource("3_rq7ix")]
layout_mode = 1
offset_left = 439.0
offset_top = -94.0
offset_right = 559.0
offset_bottom = 76.0
deal_count = 4

[node name="JokerPile" parent="." instance=ExtResource("4_e126o")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.0
offset_top = -304.0
offset_right = -121.0
offset_bottom = -104.0
